--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <com.unistrong.myapplication.KeyValueView
+    <com.keyvalue.view.KeyValueView
         android:id="@+id/keyValueView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
